--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <title>This is my webpage</title>
   </head>
   <body>
+    <div style="color:blue">
      <h1>Welcome to the page</h1>
+    </div>
+    
+    <div>
+     <ol>
+       <li>First</li>
+       <li>second</li>
+       <li>Third</li>
+    </div>
   </body>
 </html>
