--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
        <li>second</li>
        <li>Third</li>
     </div>
+    
+    <div>
+      <p>This the great session</p>
+    </div>
   </body>
 </html>
