--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        <li>Third</li>
     </div>
     
-    <div>
+    <div style="color:green">
       <p>This the great session</p>
     </div>
   </body>
