--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
        <li>Third</li>
     </div>
     
-    <div style="color:green">
-      <p>This the great session</p>
+    <div>
+      <p style="color:green">This the great session</p>
     </div>
   </body>
 </html>
